Stack edit, vector edit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,5 @@ add_executable(Graphs main.cpp
         MyVector.cpp
         MyVector.h
         MyStack.cpp
-        MyStack.h)
+        MyStack.h
+)
